--- a/src/Style.css
+++ b/src/Style.css
@@ -23,3 +23,12 @@
       margin: calc((100vw - 500px) * 0.05 / 2);
     }
   }
+
+  @media screen and (max-width: 500px) {
+    .frame {
+      width: calc(100% - (100% * 0.1));
+      height: calc(100% - (100% * 0.1));
+      margin: calc((100vw - 500px) * 0.1 / 2);
+    }
+  }
+  /* Path: src\Style.css */
